CS_SBOX_20150209_01/Metadata/unpackaged/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Areas_of_Interest__c</fullName>
        <description>Created by LM on 9/27/2013 for Phase 2 rollout</description>
        <label>Areas of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CRM_Lead_ID__c</fullName>
        <description>Created by LM on 1/14/14 for Phase2</description>
        <label>CRM Lead ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Department__c</fullName>
        <description>Created by LM on 9/27/2013 for Phase 2 rollout</description>
        <label>Function/Department</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting/Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investor Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR/Corporate Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GA_Campaign__c</fullName>
        <description>Google Analytic Campaign</description>
        <inlineHelpText>Google Analytic Campaign</inlineHelpText>
        <label>GA Campaign</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Content__c</fullName>
        <description>Google Analytic Content</description>
        <inlineHelpText>Google Analytic Content</inlineHelpText>
        <label>GA Content</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GA_Medium__c</fullName>
        <description>Google Analytic Medium</description>
        <inlineHelpText>Google Analytic Medium</inlineHelpText>
        <label>GA Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Source__c</fullName>
        <description>Google Analytic Source</description>
        <inlineHelpText>Google Analytic Source</inlineHelpText>
        <label>GA Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Term__c</fullName>
        <description>Google Analytic Term</description>
        <inlineHelpText>Google Analytic Term</inlineHelpText>
        <label>GA Term</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <description>Created by LM on 9/27/2013 for Phase 2 rollout</description>
        <label>Job Role</label>
        <picklist>
            <picklistValues>
                <fullName>Account Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant/Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freelancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner/Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professor/Dean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vice President</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Pass_Date__c</fullName>
        <description>Created by LM on 9/27/2013 for Phase 2 rollout</description>
        <label>Lead Pass Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Pass_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by LM on 9/27/2013 for Phase 2 rollout</description>
        <label>Lead Pass Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <description>Created by LM on 9/27/2013 for Phase 2 rollout</description>
        <label>Lead Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Most_Recent__c</fullName>
        <description>Created by LM on 11/20/2013 for Phase 2 rollout</description>
        <label>Lead Source – Most Recent</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Substatus__c</fullName>
        <description>Created by LM on 10/1/2013 for Phase 2 rollout</description>
        <label>Lead Substatus</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Bad Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Collector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Biz_Source__c</fullName>
        <description>Created by LM on 11/18/2013 for Phase 2 rollout</description>
        <label>New Biz Source</label>
        <picklist>
            <picklistValues>
                <fullName>Cold Call Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Lead</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opp_Record_Type__c</fullName>
        <formula>CASE($Profile.Name, &quot;Renewals Sales User&quot;, &quot;Renewals&quot;, &quot;New Biz Sales User&quot;, &quot;New Biz&quot;, &quot;System Administrator&quot;, &quot;New Biz&quot;, &quot;Transactional Broadcast&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR_Activities__c</fullName>
        <description>Created by LM on 9/9/2013 for Phase 2 rollout</description>
        <label>PR Activities</label>
        <picklist>
            <picklistValues>
                <fullName>Use Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Free Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Cision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nothing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PR_Department_Size__c</fullName>
        <description>Created by LM on 9/27/2013 for Phase 2 rollout</description>
        <label>PR Department Size</label>
        <picklist>
            <picklistValues>
                <fullName>There is a whole bunch of us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>There are a few of us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>It&apos;s just me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>There is no PR department</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Employees__c</fullName>
        <description>Created by LM on 9/5/2013 for Phase 2 rollout</description>
        <label>Web Employees</label>
        <picklist>
            <picklistValues>
                <fullName>Small Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fewer than 1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 1,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Revenue__c</fullName>
        <description>Created by LM on 9/5/2013 for Phase 2 rollout</description>
        <label>Web Revenue</label>
        <picklist>
            <picklistValues>
                <fullName>Small Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than $150 Million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than $150 Million</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>iSell__OSKeyID__c</fullName>
        <description>The OSKeyID is OneSource’s unique company identifier. It is a required field and, in Salesforce Professional Edition, must be visible and available on page layouts for all users.</description>
        <externalId>true</externalId>
        <label>OSKeyID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrpu__Alert_Message__c</fullName>
        <description>This field is installed by Riptide Pop-up Alerts and is used in conjunction with the Pop-up Alert S-Control.</description>
        <inlineHelpText>If you enter text into this field the text will be displayed in a pop-up message whenever someone views this record.</inlineHelpText>
        <label>Alert Message</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllLeadsCreatedThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Created_Date_Time__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>eadmi</value>
        </filters>
        <label>All Leads Created This Week</label>
    </listViews>
    <listViews>
        <fullName>EloquaAdminLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>eadmi</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <label>This Week&apos;s Leads - Still Eloqua Admin</label>
        <sharedTo>
            <group>Marketing</group>
            <group>Sys_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Legacy_User_Open_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.PHONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CONVERTED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>LUser</value>
        </filters>
        <label>Legacy User Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyOpenContactedLeads</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Contacted</value>
        </filters>
        <label>My Open Contacted Leads</label>
    </listViews>
    <listViews>
        <fullName>MyOpenInProgressLeads</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>My Open In Progress Leads</label>
    </listViews>
    <listViews>
        <fullName>MyOpenLeads</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Contacted,Unable to Contact,In Progress</value>
        </filters>
        <label>My Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyOpenNewLeads</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>My Open New Leads</label>
    </listViews>
    <listViews>
        <fullName>MyOpenUnabletoContactLeads</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Unable to Contact</value>
        </filters>
        <label>My Open Unable to Contact Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Read_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Contacted,Unable to Contact,In Progress</value>
        </filters>
        <label>My Read Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Unqualified_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Substatus__c</columns>
        <columns>Areas_of_Interest__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Unqualified</value>
        </filters>
        <label>My Unqualified Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>eadmi</value>
        </filters>
        <label>All Leads Created Today</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Address_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Status, &quot;Qualified&quot;),
OR(ISBLANK(Street)=TRUE,
ISBLANK(City)=TRUE,
ISBLANK(State)=TRUE,
ISBLANK(Country)=TRUE,
ISBLANK(PostalCode)=TRUE
)
)</errorConditionFormula>
        <errorMessage>The Address must be filled in on Qualified Leads.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unqualified_Reason_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Status, &quot;Unqualified&quot;), 
ISPICKVAL(Lead_Substatus__c,&quot;&quot;) 
)</errorConditionFormula>
        <errorDisplayField>Lead_Substatus__c</errorDisplayField>
        <errorMessage>Lead Substatus is required when the Lead Status is &quot;Unqualified&quot;.</errorMessage>
    </validationRules>
</CustomObject>